[package]
name = "watsond"
version = "0.1.0"
authors = ["Jan Schulte <hello@unexpected-co.de>"]

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
uuid = { version = "0.6", features = ["v4"] }
regex = "0.2"
bincode = "1.0.0"

[dependencies.rocket_contrib]
version = "0.3.6"
default-features = false
features = ["json"]
